--- a/styles.css
+++ b/styles.css
@@ -550,7 +550,7 @@ html{
 .item-1 {
     grid-column: 1 / 2;
     box-shadow: 8px 8px 0px 0px var(--color-primary);
-    background-image: url(/img/projeto1.png);
+    background-image: url(img/projeto1.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -570,7 +570,7 @@ html{
 .item-2 {
     grid-column: 2 / 4;
     box-shadow: 8px 8px 0px 0px var(--color-primary);
-    background-image: url(/img/projeto2.png);
+    background-image: url(img/projeto2.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -590,7 +590,7 @@ html{
 .item-3 {
     grid-column: 1 / 3;
     box-shadow: 8px 8px 0px 0px var(--color-primary);
-    background-image: url(/img/projeto3.png);
+    background-image: url(img/projeto3.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -609,7 +609,7 @@ html{
 .item-4 {
     grid-column: 3 / 4;
     box-shadow: 8px 8px 0px 0px var(--color-primary);
-    background-image: url(/img/projeto4.png);
+    background-image: url(img/projeto4.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -628,7 +628,7 @@ html{
 .item-5 {
     grid-column: 1 / 2;
     box-shadow: 8px 8px 0px 0px var(--color-primary);
-    background-image: url(/img/projeto5.png);
+    background-image: url(img/projeto5.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -648,7 +648,7 @@ html{
 .item-6 {
     grid-column: 2 / 4;
     box-shadow: 8px 8px 0px 0px var(--color-primary);
-    background-image: url(/img/projeto6.png);
+    background-image: url(img/projeto6.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -668,7 +668,7 @@ html{
 .item-7 {
     grid-column: 1 / 3;
     box-shadow: 8px 8px 0px 0px var(--color-primary);
-    background-image: url(/img/projeto7.png);
+    background-image: url(img/projeto7.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
