--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
 
 body {
     background-color: var(--color-dark);
+    overflow-x: hidden;
 }
 
 html{
@@ -805,7 +806,6 @@ html{
 }
 
 
-/* --- MOBILE NAV (FOOTER) --- */
 #mobile-nav {
     display: none;
 }
@@ -929,10 +929,10 @@ html{
 
     @keyframes write{
         20%{
-            width: 10ch;
+            width: 11.4ch;
         }
         70%{
-            width: 10ch;
+            width: 11.4ch;
         }
         85%{
             width: 0ch;
